// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAccountSelector renders an account selector 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto; margin-bottom: 0px;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
          style="overflow: hidden;"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--ellipsis snap-ui-renderer__selector snap-ui-renderer__account-selector mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-lg"
            style="justify-content: inherit; text-align: inherit; height: inherit; min-height: 48px; max-height: 89px;"
          >
            <span
              class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--width-full mm-box--color-text-default"
            >
              <div
                class="mm-box multichain-account-list-item items-center mm-box--padding-4 mm-box--display-flex mm-box--background-color-transparent"
                data-testid="account-item"
              >
                <div
                  class="mm-box flex w-full gap-2 items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--sm:display-none"
                    data-testid="account-list-item-badge"
                  >
                    <button
                      class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
                      data-testid="multichain-badge-status"
                    >
                      <div
                        class="mm-box mm-badge-wrapper mm-box--display-inline-block"
                      >
                        <div
                          class="flex-shrink-0 items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 flex"
                        >
                          <div
                            class="flex [&>div]:!rounded-none"
                          >
                            <div
                              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
                            >
                              <svg
                                height="32"
                                width="32"
                                x="0"
                                y="0"
                              >
                                <rect
                                  fill="#18CDF2"
                                  height="32"
                                  transform="translate(-1.04839350379394 -3.3042840694604987) rotate(328.9 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                                <rect
                                  fill="#035E56"
                                  height="32"
                                  transform="translate(-18.298461708832043 10.5924618717486) rotate(176.2 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                                <rect
                                  fill="#F26602"
                                  height="32"
                                  transform="translate(16.667842018223922 -14.205139722997082) rotate(468.9 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
                        />
                      </div>
                    </button>
                  </div>
                  <div
                    class="mm-box mm-box--display-none mm-box--sm:display-flex"
                  >
                    <div
                      class="inline-flex flex-shrink-0 items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 shrink-0"
                    >
                      <div
                        class="flex [&>div]:!rounded-none"
                      >
                        <div
                          style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
                        >
                          <svg
                            height="32"
                            width="32"
                            x="0"
                            y="0"
                          >
                            <rect
                              fill="#18CDF2"
                              height="32"
                              transform="translate(-1.04839350379394 -3.3042840694604987) rotate(328.9 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                            <rect
                              fill="#035E56"
                              height="32"
                              transform="translate(-18.298461708832043 10.5924618717486) rotate(176.2 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                            <rect
                              fill="#F26602"
                              height="32"
                              transform="translate(16.667842018223922 -14.205139722997082) rotate(468.9 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="mm-box multichain-account-list-item__content mm-box--display-flex mm-box--flex-direction-column"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                      >
                        <div
                          class="mm-box multichain-account-list-item__account-name mm-box--margin-inline-end-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
                        >
                          <button
                            class="mm-box mm-text multichain-account-list-item__account-name__button mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default mm-box--background-color-transparent"
                          >
                            Test Account
                          </button>
                        </div>
                        <div
                          class="mm-box mm-text multichain-account-list-item__asset mm-text--body-md mm-text--ellipsis mm-text--text-align-end mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-flex-end mm-box--align-items-center mm-box--color-text-default"
                        >
                          <div
                            class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                            data-testid="first-currency-display"
                            title="966.988 ETH"
                          >
                            <span
                              class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                              data-testid="account-value-and-suffix"
                            >
                              966.988
                            </span>
                            <span
                              class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                            >
                              ETH
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                          data-testid="account-list-address"
                        >
                          0x0DCD5...3E7bc
                        </p>
                      </div>
                      <div
                        class="mm-box network-indicator"
                      >
                        <div
                          class="mm-box"
                          data-testid="account-network-indicator"
                        >
                          <div>
                            <div
                              aria-describedby="tippy-tooltip-1"
                              class=""
                              data-original-title="This can be changed in "Settings > Alerts""
                              data-tooltipped=""
                              style="display: inline;"
                              tabindex="0"
                            >
                              <div
                                class="mm-box multichain-avatar-group mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                                data-testid="avatar-group"
                              >
                                <div
                                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                                >
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: 0px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Polygon Mainnet logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/pol-token.svg"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Binance Smart Chain logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/bnb.svg"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      G
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Custom Mainnet RPC logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/eth_logo.svg"
                                      />
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="mm-box"
                                >
                                  <p
                                    class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                                  >
                                    +1
                                  </p>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
                />
              </div>
            </span>
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-down.svg');"
            />
          </button>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAccountSelector renders inside a field 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto; margin-bottom: 0px;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box snap-ui-renderer__field mm-box--display-flex mm-box--flex-direction-column"
          style="overflow: hidden;"
        >
          <label
            class="mm-box mm-text mm-label mm-label--html-for mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
            for="account-selector"
          >
            Account Selector
          </label>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--ellipsis snap-ui-renderer__selector snap-ui-renderer__account-selector mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-lg"
            style="justify-content: inherit; text-align: inherit; height: inherit; min-height: 48px; max-height: 89px;"
          >
            <span
              class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--width-full mm-box--color-text-default"
            >
              <div
                class="mm-box multichain-account-list-item items-center mm-box--padding-4 mm-box--display-flex mm-box--background-color-transparent"
                data-testid="account-item"
              >
                <div
                  class="mm-box flex w-full gap-2 items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--sm:display-none"
                    data-testid="account-list-item-badge"
                  >
                    <button
                      class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
                      data-testid="multichain-badge-status"
                    >
                      <div
                        class="mm-box mm-badge-wrapper mm-box--display-inline-block"
                      >
                        <div
                          class="flex-shrink-0 items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 flex"
                        >
                          <div
                            class="flex [&>div]:!rounded-none"
                          >
                            <div
                              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
                            >
                              <svg
                                height="32"
                                width="32"
                                x="0"
                                y="0"
                              >
                                <rect
                                  fill="#18CDF2"
                                  height="32"
                                  transform="translate(-1.04839350379394 -3.3042840694604987) rotate(328.9 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                                <rect
                                  fill="#035E56"
                                  height="32"
                                  transform="translate(-18.298461708832043 10.5924618717486) rotate(176.2 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                                <rect
                                  fill="#F26602"
                                  height="32"
                                  transform="translate(16.667842018223922 -14.205139722997082) rotate(468.9 16 16)"
                                  width="32"
                                  x="0"
                                  y="0"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
                        />
                      </div>
                    </button>
                  </div>
                  <div
                    class="mm-box mm-box--display-none mm-box--sm:display-flex"
                  >
                    <div
                      class="inline-flex flex-shrink-0 items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 shrink-0"
                    >
                      <div
                        class="flex [&>div]:!rounded-none"
                      >
                        <div
                          style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
                        >
                          <svg
                            height="32"
                            width="32"
                            x="0"
                            y="0"
                          >
                            <rect
                              fill="#18CDF2"
                              height="32"
                              transform="translate(-1.04839350379394 -3.3042840694604987) rotate(328.9 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                            <rect
                              fill="#035E56"
                              height="32"
                              transform="translate(-18.298461708832043 10.5924618717486) rotate(176.2 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                            <rect
                              fill="#F26602"
                              height="32"
                              transform="translate(16.667842018223922 -14.205139722997082) rotate(468.9 16 16)"
                              width="32"
                              x="0"
                              y="0"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="mm-box multichain-account-list-item__content mm-box--display-flex mm-box--flex-direction-column"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                      >
                        <div
                          class="mm-box multichain-account-list-item__account-name mm-box--margin-inline-end-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
                        >
                          <button
                            class="mm-box mm-text multichain-account-list-item__account-name__button mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default mm-box--background-color-transparent"
                          >
                            Test Account
                          </button>
                        </div>
                        <div
                          class="mm-box mm-text multichain-account-list-item__asset mm-text--body-md mm-text--ellipsis mm-text--text-align-end mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-flex-end mm-box--align-items-center mm-box--color-text-default"
                        >
                          <div
                            class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                            data-testid="first-currency-display"
                            title="966.988 ETH"
                          >
                            <span
                              class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                              data-testid="account-value-and-suffix"
                            >
                              966.988
                            </span>
                            <span
                              class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                            >
                              ETH
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                          data-testid="account-list-address"
                        >
                          0x0DCD5...3E7bc
                        </p>
                      </div>
                      <div
                        class="mm-box network-indicator"
                      >
                        <div
                          class="mm-box"
                          data-testid="account-network-indicator"
                        >
                          <div>
                            <div
                              aria-describedby="tippy-tooltip-13"
                              class=""
                              data-original-title="This can be changed in "Settings > Alerts""
                              data-tooltipped=""
                              style="display: inline;"
                              tabindex="0"
                            >
                              <div
                                class="mm-box multichain-avatar-group mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                                data-testid="avatar-group"
                              >
                                <div
                                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                                >
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: 0px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Polygon Mainnet logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/pol-token.svg"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Binance Smart Chain logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/bnb.svg"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      G
                                    </div>
                                  </div>
                                  <div
                                    class="mm-box mm-box--rounded-full"
                                    style="margin-left: -8px;"
                                  >
                                    <div
                                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                                    >
                                      <img
                                        alt="Custom Mainnet RPC logo"
                                        class="mm-avatar-network__network-image"
                                        src="./images/eth_logo.svg"
                                      />
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="mm-box"
                                >
                                  <p
                                    class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                                  >
                                    +1
                                  </p>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
                />
              </div>
            </span>
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-down.svg');"
            />
          </button>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;
